--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fly-http",
-  "version": "0.0.0",
+  "version": "0.1.0-alpha.0",
   "description": "Chained and declarative HTTP client based on the browser Fetch API",
   "main": "index.js",
   "files": [
