--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fly-http",
+  "name": "http-chain",
   "version": "0.1.0-alpha.2",
   "description": "Chained and declarative HTTP client based on the browser Fetch API",
   "main": "index.js",
@@ -30,10 +30,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/muwenzi/fly-http.git"
+    "url": "git+https://github.com/muwenzi/http-chain.git"
   },
   "keywords": [
-    "fly",
     "http",
     "http",
     "rest",
@@ -44,9 +43,9 @@
   "author": "Kimi Gao",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/muwenzi/fly-http/issues"
+    "url": "https://github.com/muwenzi/http-chain/issues"
   },
-  "homepage": "https://github.com/muwenzi/fly-http",
+  "homepage": "https://github.com/muwenzi/http-chain",
   "dependencies": {
     "file-saver": "^1.3.8"
   },
