--- a/.eslintrc
+++ b/.eslintrc
@@ -6,8 +6,8 @@
     "jest": true
   },
   "globals": {
-    spyOn: true,
-    jasmine: true
+    "spyOn": true,
+    "jasmine": true
   },
   "rules": {
     "prefer-promise-reject-errors": "off"
